docker-registry/private-repo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-repo
  namespace: private-repo
spec:
  selector:
    app: private-repo
  ports:
  - port: 5000
    targetPort: 5000
