docker-registry/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry
  namespace: private-repo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: Host(`repo.infra.sprint.luchtenberg.eu`)
        kind: Rule
        services:
          - name: private-repo
            port: 5000
    tls:
      secretName: traefik-svc-local-luchtenberg-eu-production-tls
